# tauri-plugin-llm

./: .gitignore  Cargo.toml  End2End.dockerfile  README.md  build.rs  changes.txt  endtoend.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  taskfile.yml  taskfile_model.yml  taskfile_testing.yml
dist-js/: index.cjs  index.d.ts  index.js
examples/tauri-app/: package.json  wdio-macos.conf.js  wdio.conf.js
examples/tauri-app/src/: App.svelte  style.css
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
examples/tauri-app/src/lib/: Prompt.svelte
examples/tauri-app/test/specs/: test.e2e.js
ffi/go/: go.mod  go.sum  lib.go
ffi/libs/: libgotproc.h
guest-js/: index.ts
macros/: Cargo.toml
macros/src/: lib.rs
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: add_configuration.toml  list_available_models.toml  retry_recv.toml  stream.toml  switch_model.toml
permissions/schemas/: schema.json
src/: chat_templates.rs  commands.rs  desktop.rs  error.rs  gotemplate.rs  iter.rs  lib.rs  llm.rs  mobile.rs  models.rs  templates.rs
src/llm/: backend.rs  error.rs  llmconfig.rs  loader.rs  loaders.rs  runtime.rs
src/llm/backend/: gemma.rs  llama.rs  qwen3.rs
src/llm/loaders/: safetensor.rs
src/llm/runtime/: backend.rs  llama3.rs  local.rs  mock.rs  qwen3.rs  tool_call.rs
src/llm/runtime/backend/: gemma.rs  llama.rs  qwen3.rs
tests/: test_chattemplates.rs  test_config.proptest-regressions  test_config.rs  test_iter.proptest-regressions  test_iter.rs  test_llmservice.rs  test_load_qwen_quantized.rs  test_loaders.rs  test_nunjucks.js  test_runtime.rs  test_runtime_toolcalls.rs  test_templates.rs  test_templates_example.rs
tests/common/: mod.rs
tests/fixtures/: test_go_qwen3_input_data.json  test_jinja_input_data.json  test_jinja_template.json  test_raw.jinja  test_runtime_llama3.config.json  test_runtime_mock.json  test_runtime_qwen3.config.json
