[package]
name                = "tauri-plugin-llm"
version             = "0.1.0"
authors             = ["Matthias Kandora<matthias@crabnebula.dev>", "Fabian-Lars Scheidt<fabianlars@crabnebula.dev>"]
description         = "Load LLMs and makes them accessible as Tauri plugin"
edition             = "2021"
rust-version        = "1.77.2"
links               = "tauri-plugin-llm"
exclude             = ["/examples", "/dist-js", "/guest-js", "/node_modules"]

[workspace]
members = ["examples/tauri-app/src-tauri"]

[dependencies]
tauri               = {version = "2.9.4" }
serde               = {version = "1.0" }
thiserror           = {version = "2" }
anyhow              = {version = "1.0" }
serde_json          = {version = "1.0" }
tokio               = {version = "1.48.0", features = ["full"] }
rand                = {version = "0.9.2" }
failsafe            = {version = "1.3.0" }
base64              = {version= "0.22.1" }

# huggingface integration 
hf-hub              = { version = "0.4.3" }

# for tracing
tracing             = {version = "0.1"}
tracing-subscriber  = {version = "0.3.20", features = ["json"]}
tracing-appender    = {version = "0.2.3"}

# for LLM inference
tokenizers          = { git = "https://github.com/huggingface/tokenizers", branch = "main" }

# templating. 
minijinja           = { version = "2.15.1", features = ["json"] }

# Optional dependency to MCPurify. Please check the LICENSE before enabling MCPurify.
# mcpurify          = { git = "git@github.com:crabnebula-dev/MCPurify.git", optional = true }
# mcpurify          = { path = "../mcpurify", optional = true }

# for LLM inference (CPU-only by default; enable `cuda` feature for GPU)
[target.'cfg(not(target_os="macos"))'.dependencies]
candle-core         = { git = "https://github.com/huggingface/candle.git" }
candle-nn           = { git = "https://github.com/huggingface/candle.git" }
candle-transformers = { git = "https://github.com/huggingface/candle.git" }

# for LLM inference
[target.'cfg(target_os="macos")'.dependencies]
candle-core         = { git = "https://github.com/huggingface/candle.git", features = ["metal"] }
candle-nn           = { git = "https://github.com/huggingface/candle.git", features = ["metal"] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", features = ["metal"] }

[build-dependencies]
tauri-plugin = { version = "2.5.2", features = ["build"] }

[dev-dependencies]
proptest                = { version = "1.9.0" }
tauri-plugin-automation = { version = "0.1.1"}

[features]
default             = []
cuda                = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
mcpurify            = []

tauri-plugin-llm    = []
